--- a/styles.css
+++ b/styles.css
@@ -562,3 +562,27 @@ footer {
 .mb-2 { margin-bottom: 2rem; }
 .mb-3 { margin-bottom: 3rem; }
 
+/*botão do whatsapp*/
+
+.whatsapp-float {
+  position: fixed;
+  width: 60px;
+  height: 60px;
+  bottom: 20px;
+  right: 20px;
+  background-color: #25d366;
+  color: #fff;
+  border-radius: 50%;
+  text-align: center;
+  box-shadow: 2px 2px 10px rgba(0,0,0,0.3);
+  z-index: 1000;
+  transition: all 0.3s ease;
+}
+.whatsapp-float:hover {
+  transform: scale(1.1);
+  box-shadow: 3px 3px 15px rgba(0,0,0,0.4);
+}
+.whatsapp-float img {
+  width: 35px;
+  margin-top: 12px;
+}
