--- a/static/styles.css
+++ b/static/styles.css
@@ -1014,3 +1014,9 @@ footer {
         margin-right: auto;
     }
 }
+
+@media (max-width: 320px) {
+    .titulo-1{
+        margin-top: 50px;
+    }
+}
