--- a/static/styles.css
+++ b/static/styles.css
@@ -911,6 +911,10 @@ footer {
         margin-top: 70px;
     }
 
+    .titulo-1{
+        margin-top: 50px;
+    }
+
     .hero h1 {
         font-size: 1.6rem;
     }
